#1 Dummy endpoint for countries.
